--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "html2canvas": "^1.4.1",
